install react and create example component

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,9 @@
 {
-  "name": "rescript-project-template",
+  "name": "journey-planner",
   "version": "0.0.1",
+  "reason": {
+    "react-jsx": 3
+  },
   "sources": {
     "dir" : "src",
     "subdirs" : true
@@ -11,8 +14,9 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
+    "@rescript/react"
   ],
   "warnings": {
     "error" : "+101"
-  },
+  }
 }
