--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "clean": "rescript clean -with-deps",
     "start": "rescript build -w"
   },
+  "repository": "git@bitbucket.org:RadiolaRTI/journey-planner.git",
   "keywords": [
     "rescript"
   ],
-  "author": "",
+  "author": "Gianpaolo cigaral",
   "license": "MIT",
   "dependencies": {
+    "@glennsl/bs-json": "^5.0.4",
     "@rescript/react": "^0.10.3",
-    "react": "^18.1.0",
+    "bs-fetch": "^0.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rescript": "^9.1.4"
   }
 }
