--- a/bsconfig.json
+++ b/bsconfig.json
@@ -9,7 +9,7 @@
     "subdirs" : true
   },
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": false
   },
   "suffix": ".bs.js",
