--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "journey-planner",
   "version": "0.0.1",
   "scripts": {
-    "build": "rescript",
+    "build": "rescript build",
+    "build:production": "vite build",
     "clean": "rescript clean -with-deps",
+    "serve": "vite serve",
+    "server": "vite",
     "start": "rescript build -w"
   },
   "repository": "git@bitbucket.org:RadiolaRTI/journey-planner.git",
@@ -15,9 +18,11 @@
   "dependencies": {
     "@glennsl/bs-json": "^5.0.4",
     "@rescript/react": "^0.10.3",
+    "@vitejs/plugin-react": "^1.3.2",
     "bs-fetch": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "^9.1.4"
+    "rescript": "^9.1.4",
+    "vite": "^2.9.13"
   }
 }
