set up tailwindcss and create basic page

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ dist/
 # JetBrains IDE
 .idea/
 
+# VSCode IDE
+.vscode/
+
 # Unit test reports
 TEST*.xml
 
@@ -53,3 +56,5 @@ Thumbs.db
 *.mov
 *.wmv
 
+# Misc
+tmp/
