--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "react-dom": "^18.2.0",
     "rescript": "^9.1.4",
     "vite": "^2.9.13"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   }
 }
