--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@rescript/react": "^0.10.3",
     "@vitejs/plugin-react": "^1.3.2",
     "bs-fetch": "^0.6.2",
+    "mapbox-gl": "^2.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.17",
     "rescript": "^9.1.4",
+    "rescript-react-mapbox-gl": "^1.0.0",
     "vite": "^2.9.13"
   },
   "devDependencies": {
