--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@glennsl/bs-json": "^5.0.4",
+    "@googlemaps/polyline-codec": "^1.0.28",
     "@rescript/react": "^0.10.3",
     "@vitejs/plugin-react": "^1.3.2",
     "bs-fetch": "^0.6.2",
@@ -25,7 +26,7 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.17",
     "rescript": "^9.1.4",
-    "rescript-react-mapbox-gl": "^1.0.0",
+    "rescript-react-mapbox-gl": "^1.0.1",
     "vite": "^2.9.13"
   },
   "devDependencies": {
